--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
     tools:context=".ui.home.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_cities"
+        android:id="@+id/cities_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginStart="32dp"
@@ -27,7 +27,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.060000002" />
+        app:layout_constraintVertical_bias="0.060000002"
+        />
 
 
     <TextView
@@ -45,8 +46,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/rcv_cities"
-        app:layout_constraintTop_toBottomOf="@+id/rcv_cities"
+        app:layout_constraintStart_toStartOf="@+id/cities_recycler_view"
+        app:layout_constraintTop_toBottomOf="@+id/cities_recycler_view"
         app:layout_constraintVertical_bias="0.0"
         tools:text="CLOUDY"/>
 
