UI modification on going

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,29 +18,26 @@
         android:id="@+id/cities_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.060000002"
-        />
+        app:layout_constraintVertical_bias="0.060000002" />
 
 
     <TextView
         android:id="@+id/textView"
+        style="@style/weather_title_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:textSize="36sp"
         android:text="@{viewModel.weatherCondition}"
-        android:onClick="@{()-> viewModel.openWeatherData()}"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -49,7 +46,7 @@
         app:layout_constraintStart_toStartOf="@+id/cities_recycler_view"
         app:layout_constraintTop_toBottomOf="@+id/cities_recycler_view"
         app:layout_constraintVertical_bias="0.0"
-        tools:text="CLOUDY"/>
+        tools:text="CLOUDY" />
 
     <TextView
         android:id="@+id/textView2"
