--- a/app/src/main/res/layout/cities_forecast_layout.xml
+++ b/app/src/main/res/layout/cities_forecast_layout.xml
@@ -21,7 +21,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        app:cardBackgroundColor="@color/lightBlue"
+        app:cardBackgroundColor="@{viewModel.backgroundColor}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -69,7 +69,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_centerInParent="true"
-                android:background="@drawable/ic_sunny"
+                android:background="@{viewModel.iconDrawable}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
