--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="disable_grey">#dbdbdb</color>
+    <color name="detail_label_dark">#555555</color>
     <color name="white">#ffffff</color>
     <color name="transparent">#80ffffff</color>
 
