--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="android:textSize">40sp</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/disable_grey</item>
+        <item name="android:textColor">@color/detail_label_dark</item>
         <item name="android:lineSpacingExtra">4sp</item>
         <item name="android:gravity">center</item>
     </style>
@@ -33,13 +33,13 @@
         <item name="android:textSize">30sp</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/disable_grey</item>
+        <item name="android:textColor">@color/detail_label_dark</item>
         <item name="android:lineSpacingExtra">4sp</item>
         <item name="android:gravity">center</item>
     </style>
 
     <style name="forecast_time_style">
-        <item name="android:textSize">30sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/white</item>
