--- a/app/src/main/res/layout/json_cities_layout.xml
+++ b/app/src/main/res/layout/json_cities_layout.xml
@@ -34,7 +34,7 @@
             android:layout_marginTop="24dp"
             android:minHeight="20dp"
             android:text="@{data}"
-            android:textColor="@color/detail_label_dark"
+            android:textColor="@color/white"
             android:onClick="@{() -> citiesViewModel.onItemClick(data)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
