--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="dp20">20dp</dimen>
     <dimen name="dp21">21dp</dimen>
     <dimen name="dp24">24dp</dimen>
+    <dimen name="dp48">48dp</dimen>
+    <dimen name="dp96">96dp</dimen>
 </resources>
